syntax = "proto3";

package proto;

option java_package = "org.oppia.android.scripts.proto";
option java_multiple_files = true;

// Represents the list of Coverage Report of all analysed files.
message CoverageReportContainer {
  // Stores the list of all Coverage Reports.
  repeated CoverageReport coverage_report = 1;
}

message CoverageReport {
  oneof report_status {
    // Coverage report details when coverage data retrieval succeeds.
    CoverageDetails details = 1;
    // Failure message when coverage data retrieval fails.
    string failure_message = 2;
  }
}

// Coverage Report details that contains the bazel coverage data retrieved from the
// Bazel coverage execution.
message CoverageDetails {
  // The test target for which the coverage report is generated.
  string bazel_test_target = 1;
  // The relative path of the covered file.
  string file_path = 2;
  // SHA-1 hash of the file content at the time of report (to guard against changes).
  string file_sha1_hash = 3;
  // The lines of code covered in the report.
  repeated CoveredLine covered_line = 4;
  // The total number of lines found in the covered file.
  int32 lines_found = 5;
  // The total number of lines hit in the covered file.
  int32 lines_hit = 6;
}

// Information about a single line that was covered during the tests.
message CoveredLine {
  // The line number of the covered line.
  int32 line_number = 1;
  // The coverage status of the covered line.
  Coverage coverage = 2;
}

enum Coverage {
  // Coverage status is unspecified.
  UNSPECIFIED = 0;
  // The line is fully covered in a test, that is, it was executed at least once.
  FULL = 1;
  // The line is not covered at all, that is, it was never executed during a test.
  NONE = 2;
}
